force-app/main/default/objects/Orders__c/fields/Customer_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Number__c</fullName>
    <displayFormat>ORD-{0000}</displayFormat>
    <label>Customer Order Number</label>
    <type>AutoNumber</type>
</CustomField>