force-app/main/default/objects/Orders__c/fields/Order_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Created_Date__c</fullName>
    <label>Order Created Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>