force-app/main/default/objects/Orders__c/validationRules/Order_Creation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Creation_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Order_Created_Date__c   = TODAY()</errorConditionFormula>
    <errorDisplayField>Order_Created_Date__c</errorDisplayField>
    <errorMessage>Please Enter Correct Date</errorMessage>
</ValidationRule>