force-app/main/default/objects/Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer_Order_Number__c</columns>
    <columns>Products__c</columns>
    <columns>NAME</columns>
    <columns>Order_Created_Date__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <columns>Shipping_City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>